5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1590_1014.log
== SUBMITION (2019-03-25 23:23:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total = float(input("total de vendas:")
lucro = total * 30 / 100
print(round( lucro,2 ))
-- EXECUTION TIME:
0.119326
-- ERROR:
  File "/home/codebench/codes/1590/1014/main.py", line 5
    lucro = total * 30 / 100
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:23:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total = float(input("total de vendas:")
lucro = total * 30 / 100
print(round( lucro,2))
-- EXECUTION TIME:
0.137281
-- ERROR:
  File "/home/codebench/codes/1590/1014/main.py", line 5
    lucro = total * 30 / 100
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:24:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total = float(input("total de vendas:")
lucro = total * 30 / 100
print(round (lucro,2))
-- EXECUTION TIME:
0.160093
-- ERROR:
  File "/home/codebench/codes/1590/1014/main.py", line 5
    lucro = total * 30 / 100
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:25:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total = float(input("total de vendas:"))
lucro = total * 30 / 100
print(round (lucro,2))
-- EXECUTION TIME:
0.132598
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
